<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_baseline_favorite_24"

        android:title="@string/menu_favourite" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/menu_help" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_food_bank_24"
        android:title="@string/menu_help" />

    <item
        android:id="@+id/logOut"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        android:title="@string/logOut" />


</menu>