<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_mealFragment"
            app:destination="@id/nav_mealFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_mealFragment"
        android:name="com.example.navigationdrawer.ui.meal.MealFragment"
        android:label="MealFragment" >
        <action
            android:id="@+id/action_nav_mealFragment_to_mealDetailFragment"
            app:destination="@id/mealDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealDetailFragment"
        android:name="com.example.navigationdrawer.ui.mealDetail.MealDetailFragment"
        android:label="fragment_meal_detail"
        tools:layout="@layout/fragment_meal_detail" />
</navigation>