<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3chiquito" />

    <ImageView
        android:id="@+id/img_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:srcCompat="@drawable/ic_check_circle"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/title_confirmEmail"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_check" />

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_confirmEmail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:fontFamily="@font/nunito"
        android:textFontWeight="300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <Button
        android:id="@+id/btn_toLogin"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/background_buttons"
        android:fontFamily="@font/nunito"
        android:text="@string/btn_confirmEmail"
        android:textAllCaps="false"
        android:textColor="#88B8FF"
        android:textFontWeight="700"
        android:textSize="14dp"
        app:backgroundTint="#CCEB78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle"
        app:strokeColor="#88B8FF"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>