<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_gradient"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/IV_logoStep2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo3chiquito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Ic_logUpWithGoogleStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/component_21__button_login_with_google_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IV_logoStep2" />

    <TextView
        android:id="@+id/TV_signUpWithGoogleStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="Registrarse con Google"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/Ic_logUpWithGoogleStep2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/Ic_logUpWithGoogleStep2"
        app:layout_constraintTop_toTopOf="@+id/Ic_logUpWithGoogleStep2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="69dp"
        android:layout_marginTop="26dp"
        android:hint="@string/selectYourDayOfBirthdayRegister"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/principalColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ic_logUpWithGoogleStep2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#85FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="69dp"
        android:layout_marginTop="26dp"
        android:hint="@string/inputYourWeightRegister"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/principalColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDate">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#85FFFFFF"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="69dp"
        android:layout_marginTop="26dp"
        android:hint="@string/inputYourHeightRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/principalColor"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#85FFFFFF"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputGender"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="69dp"
        android:layout_marginTop="26dp"
        android:hint="@string/selectYourGenderRegister"
        app:hintTextColor="@color/principalColor"
        android:textColorHint="@color/principalColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputHeight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#85FFFFFF"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_finishLogUp"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/background_buttons"
        android:fontFamily="@font/nunito"
        android:text="Registrarse"
        android:textAllCaps="false"
        android:textColor="#88B8FF"
        android:textFontWeight="700"
        android:textSize="19dp"
        app:backgroundTint="#CCEB78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputGender"
        app:strokeColor="#88B8FF"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>